using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace PokerRandomDefense.GamePlay.Stats
{
    public class CardStats : ScriptableObject
    {
    }
}
