using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace PokerRandomDefense.GamePlay.Stats
{
    public class GameStats
    {
        public int Health { get; set; }
        public int Wave { get; set; }
        public int Gold { get; set; }
    }
}